test/trivial/deitz/test_scope2.good
Error: Variable 'foo' used before defined (test_scope2.chpl:6)
